# spidertype

./: CNAME  LICENSE  README.md  pyproject.toml  setup.py
docs/source/: Introduction.rst  Usage.rst  api.rst  conf.py  index.rst
spidertype/: core.py  exceptions.py  types.py  validation.py
tests/: test_core.py
