[tool.poetry]
name = "spidertype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "8.0.2"
setuptools = "^72.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
